2010-01-03  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: Change version to 2.4+dev

2010-01-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Initialize 'local-echo' and 'add-LF' properly.

	* src/main.c, src/config.c: Fix error when compiling with
	   -Wformat -Werror=format-security, thanks Guillaume Rousse.

	* src/main.c: Fix: Do not all update_status if 'st' is not set.

2009-12-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c, src/minicom.h, src/minicom.c: Do not use the error
	  message display for informational messages but instead display
	  them in the status line without blocking the whole program.

	* src/updown.c: Fix possible snprintf overrun.

2009-12-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: change version number to 2.4

2009-11-17  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/dial.c: Overflow fix because of too long translated message,
	              by Vladimir V. Kamarzin, #312083

2009-11-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* INSTALL: delete, comes with automake

	* configure.in: change version number to 2.4-rc1

	* src/minicom.c: Remove experimental tag for character set conversion.

	* NEWS: update to 2.4

2009-11-15  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* autogen.sh: Use automake-1.11

2009-07-25  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* man/minicom.1: Add options -b, -D and -R.

	* src/minicom.c: Remove environment variable for the remote
	  charset and make it available via option -R.

2009-06-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.h, src/minicom.c, src/config.c:
	  Add options -D and -b to give a device file name and a baudrate,
	  overwriting the values given in the configuration file. Add
	  speed_valie(unsigned) function.

	* minicom.spec.in, doc/Makefile.am, man/minicom.1, src/config.c,
	  src/dial.c, src/main.c, src/minicom.c, src/minicom.h,