@@ -1,3 +1,7 @@
+2010-01-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
+
+	* src/main.c: Fix status line to redraw only if necessary.
+
 2010-01-03  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* configure.in: Change version to 2.4+dev
